--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -3564,7 +3564,8 @@ cGSc1MdoAAAAAElFTkSuQmCC
 </div>
 </div>
 
-</div>
+</div></section><section>
+    
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -4709,10 +4710,7 @@ Z2duvGjOtj9eXjdnU3ITgiAIgiAIgnCAx5ObEARBEARBEEROh4RmgiAIgiAIgnAACc0EQRAEQRAE
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<ul>
-<li>The identical results can be obtained using Cholesky decomposition of the covariance matrix.</li>
-<li>$L \bs \epsilon$ and $L^T \bs \epsilon$ are different, which one gives back the intended correlation?</li>
-</ul>
+<p>$L \bs \epsilon$ and $L^T \bs \epsilon$ are different, gives different correlation</p>
 </div>
 </div>
 </div><div class="fragment">
