--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -6333,7 +6333,7 @@ nfcPG/MAAAAASUVORK5CYII=
 <p>Consider the market portfolio: the market collectively believe that $\bs f \propto \bs \beta_m$: </p>
 <p>$$\mathbb{E}[\tilde{\bs r}] - r_0 = \bs \beta_m \left(r_m - r_0\right)$$</p>
 <ul>
-<li>$r_m = \mathbb{E}[\bs w_m^T \bs {\tilde r}] $ is the market portfolio&#39;s expected return</li>
+<li>$r_m = \frac{\mathbb{E}[\bs w_m^T \bs {\tilde r}]}{\bs w_m^T \bs 1} $ is the market portfolio&#39;s expected return</li>
 <li>this is exactly the CAPM.</li>
 </ul>
 </div>
