--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -5036,7 +5036,7 @@ $$s(\bs w) = \frac{\bs w^T \bs f}{\sqrt{\bs w^T V \bs w^T}}$$</p>
 </ul>
 <p>which solves the portfolio $\bs w^*$ with the maximum Sharp ratio under the view $\bs f$:</p>
 <ul>
-<li>$\bs w^*$ has a unique solution</li>
+<li>$\bs w^*$ is a unique solution</li>
 <li>all portfolios with optimal Sharp ratio have the same risky asset mix</li>
 </ul>
 </div>
@@ -5295,6 +5295,7 @@ $$\bs w^*(\bs f) = \frac{V^{-1}\bs f}{\bs f^T V^{-1} \bs f} \propto V^{-1}\bs f$
 <ul>
 <li>the optimal portfolio O has the optimal Sharp Ratio</li>
 <li>the min Variance portfolio C has the smallest variance</li>
+<li>the line start from origin because we used excess return everywhere</li>
 </ul>
 </div>
 </div>
