Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ IPython notebook. You can also download all the source ipython notebooks and rel
 <td align="center">
 <a href="Lecture2.slides.html">lecture slides</a> (<a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Lecture2.ipynb">ipynb</a>), <a href="http://nbviewer.ipython.org/github/yadongli/nyumath2048/blob/master/Homework2.ipynb">homework</a>
 </td>
-<td align="center"></td>
+<td align="center"><a href="https://github.com/yadongli" class="user-mention">@yadongli</a></td>
 </tr>
 </tbody>
 </table>
