--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -4986,12 +4986,12 @@ atznjtUXAAAAAElFTkSuQmCC
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="vector-differentiation-cheatsheet">Vector differentiation cheatsheet</h2>
+<p>$\renewcommand{p}{\partial}$</p>
 <ul>
 <li>$A, a, b, \bs c$ are constants (ie, not functions of $\bs x$)</li>
 <li>$\bs {u=u(x), v=v(x)}, y=y(\bs x)$ are functions of $\bs x$</li>
 <li>$O$ is the zero matrix, $I$ is the identity matrix</li>
 </ul>
-<p>$\renewcommand{p}{\partial}$</p>
 <table>
 <thead>
 <tr>
@@ -5024,7 +5024,7 @@ atznjtUXAAAAAElFTkSuQmCC
 <tr>
 <td style="text-align:center">$\frac{\p{\bs g(\bs u})}{\p \bs x}$</td>
 <td style="text-align:center">$\frac{\p{\bs g}}{\p \bs u} \frac{\p{\bs u}}{\p \bs x} $</td>
-<td style="text-align:center">chain rules of multiple steps,  $\frac{\p \bs y}{\p \bs x}\frac{\p \bs x}{\p \bs y} = \id$</td>
+<td style="text-align:center">$\frac{\p \bs y}{\p \bs x}\frac{\p \bs x}{\p \bs y} = \id$ , $\frac{\p \bs y}{\p \bs x}\frac{\p \bs x}{\p \bs y} = \id$</td>
 </tr>
 </tbody>
 </table>
