--- a/Lecture2.slides.html
+++ b/Lecture2.slides.html
@@ -5024,7 +5024,7 @@ atznjtUXAAAAAElFTkSuQmCC
 <tr>
 <td style="text-align:center">$\frac{\p{\bs g(\bs u})}{\p \bs x}$</td>
 <td style="text-align:center">$\frac{\p{\bs g}}{\p \bs u} \frac{\p{\bs u}}{\p \bs x} $</td>
-<td style="text-align:center">$\frac{\p \bs y}{\p \bs x}\frac{\p \bs x}{\p \bs y} = \id$ , $\frac{\p \bs y}{\p \bs x}\frac{\p \bs x}{\p \bs y} = \id$</td>
+<td style="text-align:center">$\frac{\p \bs y}{\p \bs x}\frac{\p \bs x}{\p \bs y} = \id$ , $\frac{\p \bs z}{\p \bs y}\frac{\p \bs y}{\p \bs x}  \frac{\p \bs x} {\p \bs z}= \id$, etc.</td>
 </tr>
 </tbody>
 </table>
